sample-objects/mismatched-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app-dest-rule
spec:
  host: app
  trafficPolicy:
    tls:
      mode: DISABLE
